--- a/metadata.yaml
+++ b/metadata.yaml
@@ -17,7 +17,8 @@ doc_title: 'LSST DM Vault'
 
 # Author names, ordered as a list. Each author name should be formatted as 'First Last'
 authors:
-    - 'Adam Thornton'
+  - 'Adam Thornton'
+  - 'Russ Allbery'
 
 # Current document revision date, YYYY-MM-DD
 # Only set this field if you need to manually fix the revision date;
@@ -34,7 +35,7 @@ authors:
 # doi: 10.5281/zenodo.#####
 
 # Copyright statement
-copyright: '2019, Association of Universities for Research in Astronomy'
+copyright: '2019-2020, Association of Universities for Research in Astronomy, Inc. (AURA)'
 
 # Description. A short, 1-2 sentence statemement used by document indices.
 description: 'A brief description of the LSST DM Vault'
