Fix DMTN Github URL Explain use of Vault Secrets Operator and make it primary Rebuild bibliography

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -55,4 +55,4 @@ url: "https://dmtn-112.lsst.io"
 docushare_url: ""
 
 # GitHub repo URL
-github_url: "https://github.com/lsst-sqre/dmtn-112"
+github_url: "https://github.com/lsst-dm/dmtn-112"
